[project]
name = "ek-geo"
version = "0.2.0"
description = "Geographic utilities for EarthKit"
authors = [{ name = "Jett Chen", email = "jettchen12345@gmail.com" }]
dependencies = ["geopy>=2.4.1", "pydantic>=2.8.2"]
readme = "README.md"
requires-python = ">= 3.8"
license = "MIT"

[project.optional-dependencies]
graphing = ["pydeck"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ek_geo"]
